       EPSON WorkForce WF-7511 (EXPERIMENTAL)
       EPSON WorkForce WF-7515 (EXPERIMENTAL)
       EPSON WorkForce WF-7520 (EXPERIMENTAL)
       EPSON WorkForce WF-7521 (EXPERIMENTAL)
       EPSON WorkForce WF-7525 (EXPERIMENTAL)
       EPSON PX-1200 (EXPERIMENTAL)
       EPSON PX-1600F (EXPERIMENTAL)
       EPSON PX-1700F (EXPERIMENTAL)

     - Canon inkjets:

       Canon PIXMA iP7200 (EXPERIMENTAL)
       Canon PIXMA MG2200 (EXPERIMENTAL)
       Canon PIXMA MG3200 (EXPERIMENTAL)
       Canon PIXMA MG4200 (EXPERIMENTAL)
       Canon PIXMA MG5400 (EXPERIMENTAL)
       Canon PIXMA MG6300 (EXPERIMENTAL)

       Canon MX390 series (EXPERIMENTAL)
       Canon PIXMA MX391  (EXPERIMENTAL)(*2)
       Canon PIXMA MX392  (EXPERIMENTAL)(*2)
       Canon PIXMA MX394  (EXPERIMENTAL)(*2)
       Canon PIXMA MX395  (EXPERIMENTAL)(*2)
       Canon PIXMA MX396  (EXPERIMENTAL)(*2)
       Canon PIXMA MX397  (EXPERIMENTAL)(*2)
       Canon PIXMA MX398  (EXPERIMENTAL)(*2)

       Canon MX450 series (EXPERIMENTAL)
       Canon PIXMA MX451  (EXPERIMENTAL)(*2)
       Canon PIXMA MX452  (EXPERIMENTAL)(*2)
       Canon PIXMA MX454  (EXPERIMENTAL)(*2)
       Canon PIXMA MX455  (EXPERIMENTAL)(*2)
       Canon PIXMA MX456  (EXPERIMENTAL)(*2)
       Canon PIXMA MX457  (EXPERIMENTAL)(*2)
       Canon PIXMA MX458  (EXPERIMENTAL)(*2)

       Canon MX520 series (EXPERIMENTAL)
       Canon PIXMA MX521  (EXPERIMENTAL)(*2)
       Canon PIXMA MX522  (EXPERIMENTAL)(*2)
       Canon PIXUS MX523  (EXPERIMENTAL)(*2)
       Canon PIXMA MX524  (EXPERIMENTAL)(*2)
       Canon PIXMA MX525  (EXPERIMENTAL)(*2)
       Canon PIXMA MX526  (EXPERIMENTAL)(*2)
       Canon PIXMA MX527  (EXPERIMENTAL)(*2)
       Canon PIXMA MX528  (EXPERIMENTAL)(*2)

       Canon MX720 series (EXPERIMENTAL)
       Canon PIXMA MX721  (EXPERIMENTAL)(*2)
       Canon PIXMA MX722  (EXPERIMENTAL)(*2)
       Canon PIXMA MX726  (EXPERIMENTAL)(*2)
       Canon PIXMA MX727  (EXPERIMENTAL)(*2)
       Canon PIXMA MX728  (EXPERIMENTAL)(*2)
