@@ -276,6 +276,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjets:
 
+       Canon iP7200 series (EXPERIMENTAL)(*1)
+       Canon PIXMA iP2701  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP2702  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP2740  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP2760  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP2770  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP2772  (EXPERIMENTAL)(*2)
+       Canon PIXMA iP2780  (EXPERIMENTAL)(*2)
+
        Canon PIXMA iP7200 (EXPERIMENTAL)
        Canon PIXMA MG2200 (EXPERIMENTAL)
        Canon PIXMA MG3200 (EXPERIMENTAL)
